# file-watcher

./: CMakeLists.txt  README.md  main.cpp
cmake/: Dependencies.cmake
libs/: CMakeLists.txt
libs/Backuper/: CMakeLists.txt
libs/Backuper/include/Backuper/: Interface.h
libs/Checker/: CMakeLists.txt
libs/Checker/include/Checker/: Interface.h
libs/Process/: CMakeLists.txt
libs/Process/include/Process/: Interface.h  Manager.h
libs/Process/src/: Manager.cpp
libs/PubSub/: CMakeLists.txt
libs/PubSub/include/PubSub/: Publisher.h  Subscriber.h
libs/PubSub/src/: Publisher.cpp
src/: Configurator.cpp  Configurator.h  InotifyChecker.cpp  InotifyChecker.h  LocalBackuper.cpp  LocalBackuper.h  LocalDirBackuper.cpp  LocalDirBackuper.h  Task.cpp  Task.h  main.cpp
